--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       </ul>
 
       <button class="btn btn-danger navbar-btn pull-right" style="margin-left: 1em;">Log out</button>
-      <button class="btn btn-success navbar-btn pull-right" style="margin-left: 1em;">Log in</button>
+      <%= link_to "Log in", new_user_session_path, class: "btn btn-success navbar-btn pull-right", style: "margin-left: 1em;"%>
       <button class="btn btn-default navbar-btn pull-right" >Options</button>
     </div>
   </nav>
