--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,12 @@
 <h1>Novo Post</h1>
 
-<%= form_for @post do |f| %>
+<%= form_for @post, html: {multipart: true} do |f| %>
+  <%= f.label :image %>
+  <%= f.file_field :image %>
+
+  <br>
   <%= f.label :description %>
+  <br>
   <%= f.text_area :description %>
   <br>
   <br>
