Changing navbar color

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,10 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default bg-faded white-nav-bar">
     <div class="container-fluid">
       <div class="navbar-header">
-        <!-- <a class="navbar-brand" href="/">Extragam</a> -->
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="/" style="padding: 0.6em">
           <ul style="margin: 0; vertical-align: text-top;">
             <img src="/extragam.png" width="30" height="30" class="d-inline-block align-top" alt="" > Extagram
           </ul>
@@ -36,9 +35,6 @@
 
     </div>
   </nav>
-
-  <br>
-  <br>
 
   <%= yield %>
 </body>
