--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,10 @@
 
  @import "bootstrap-sprockets";
  @import "bootstrap";
+
+body {
+  background-color: #fafafa;
+}
+.white-nav-bar {
+  background: #fff;
+}
